--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@ Matlab/Octave, Python, C++, kdenlive (video editing).</li>
 <li><a href="https://scholar.google.com/citations?user=9fD2JlYAAAAJ&hl=fr" class="fa fa-graduation-cap" ria-hidden="true" target="_blank"><span class="label">Google Scholar</span></a></li>
 <li><a href="https://www.researchgate.net/profile/Simon_Gravelle" class="fab fa-researchgate" target="_blank"><span class="label">Research gate</span></a></li>
 <li><a href="https://orcid.org/0000-0003-2149-6706" target="_blank">iD</span></a></li>
-<li><a href="https://www.youtube.com/channel/UCLmK_9wpyLVpcP7BPgN6BIw?view_as=subscriber" class="fab fa-youtube" target="_blank">iD</span></a></li>
+<li><a href="https://www.youtube.com/channel/UCLmK_9wpyLVpcP7BPgN6BIw?view_as=subscriber" class="fab fa-youtube" target="_blank"><span class="label">Youtube</span></a></li>
 </ul>
 </li>
 </ul>
