--- a/index.html
+++ b/index.html
@@ -58,7 +58,12 @@
 										
 									</div>
 									<span class="image object">
-										<img src="images/animation.gif" onerror=this.src="images/animationalternative.jpg" alt="" />
+										<!-- <img src="images/animation.gif" onerror=this.src="images/animationalternative.jpg" alt="" />-->
+										<video autoplay loop muted playsinline>
+										  <source src="images/animation.webm" type="video/webm">
+										  <source src="images/animation.mp4" type="video/mp4">
+										</video>
+
 									</span>
 								</section>
 
